# knowledge-foundry

./: .env.example  .gitignore  AI-Implementation-Reference-Bible.md  AI-Implementation-Reference.md  CHANGELOG.md  CONTRIBUTING.md  DEVOPS.md  Dockerfile  FEATURES_SUMMARY.md  IMPLEMENTATION_STATUS.md  Knowledge-Foundry-Masterplan-v5-Research-Enhanced.md  LICENSE  MASTER_PROMPT.md  README.md  Super-Optimized-Prompts-Collection.md  all prompts.md  docker-compose.yml  feature.md  kf.sh  pyproject.toml  run_e2e_tests.sh  test_kf.sh
.agent/rules/: knwoledge.md
.github/workflows/: ci.yml  deploy.yml  test.yml
docs/: API.md  ARCHITECTURE_OVERVIEW.md  CONFIGURATION.md  DEPLOYMENT.md  E2E_TESTING.md  EXPORT_SYSTEM.md  LOCAL_MODELS_API.md  QUICKSTART.md  README.md  RED_GREEN_REFACTOR.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md  UI_AUTOMATION_TESTING.md  UI_GUIDE.md  USER_GUIDE.md  deployment-runbook.md
docs/ADRs/: ADR-001-supervisor-pattern.md  ADR-002-ket-rag-over-full-graphrag.md  ADR-003-tiered-intelligence.md  ADR-004-eu-ai-act-compliance.md  ADR-005-owasp-2026-security.md  ADR-006-ragas-quality-gate.md  ADR-007-custom-llm-router.md
docs/architecture/: DOMAIN_MODEL.md  GOVERNANCE.md  RETRIEVAL_ENGINE.md  SUMMARY-AND-ROADMAP.md  phase-0.1-enterprise-architecture.md  phase-0.2-delivery-plan.md  phase-0.3-data-strategy.md  phase-0.4-evaluation-framework.md  phase-1.1-llm-router-spec.md  phase-1.2-vector-db-spec.md  phase-1.3-graph-db-ket-rag-spec.md  phase-1.4-config-multitenancy-spec.md  phase-1.5-observability-spec.md  phase-1.6-eu-ai-act-compliance-spec.md  phase-2.1-multi-agent-orchestration-spec.md  phase-2.2-plugin-catalog-spec.md  phase-3.1-security-architecture-spec.md  phase-3.2-compliance-automation-spec.md  phase-4.1-testing-strategy-spec.md  phase-5.1-performance-optimization-spec.md  phase-6.1-mlops-pipeline-spec.md  phase-7.1-ui-ux-design-spec.md  phase-8.1-continuous-improvement-spec.md
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts
infra/: alert_rules.yml  grafana-dashboard.json  grafana-dashboards.yml  prometheus.yml
k8s/: api-deployment.yaml  api-service.yaml  hpa.yaml  ingress.yaml  namespace.yaml
src/: __init__.py
src/agents/: coder.py  (+9 more)
(+173 files in other folders)
