[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "knowledge-foundry"
version = "0.1.0"
description = "Enterprise AI Knowledge Management Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Knowledge Foundry Team" },
]
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # LLM
    "anthropic>=0.42.0",
    "openai>=1.60.0",
    # Vector DB
    "qdrant-client>=1.12.0",
    # Graph DB
    "neo4j>=5.26.0",
    # Database
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    # Cache
    "redis[hiredis]>=5.2.0",
    # Text processing
    "langchain-text-splitters>=0.3.0",
    "tiktoken>=0.8.0",
    # Agent orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    # Entity resolution
    "rapidfuzz>=3.9.0",
    # Observability
    "structlog>=24.4.0",
    # Security
    "pyjwt>=2.9.0",
    "cryptography>=42.0.0",
    # Observability
    "prometheus-client>=0.21.0",
    # Utilities
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "uuid7>=0.1.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "black>=24.10.0",
    "pre-commit>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
